--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multi step form</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="">
+    <div id="root" class="lg:grid lg:place-items-center lg:min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
