style: fix minor things

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Multi step form</title>
   </head>
   <body class="">
-    <div id="root" class="lg:grid lg:place-items-center lg:min-h-screen"></div>
+    <div
+      id="root"
+      class="lg:grid lg:place-items-center lg:min-h-screen bg-n-magnolia"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
